--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,3 +1,7 @@
-/* Sass file */
-@import '103-sort_list.scss';
-@debug
+@import '103-sort_list';
+
+// Sort the list using the built-in sort() function
+$list_sorted: sort($list_to_sort);
+
+// Print the sorted list in the debug output
+@debug $list_sorted;
